--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -16,6 +16,9 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-  <google-signin-button></google-signin-button>
+  <div *ngIf="ready$ | async">
+	  <button *ngIf="!(signedIn$ | async)" (click)="signin()">Signin</button>
+	  <button *ngIf="signedIn$ | async" (click)="signout()">Signout</button>
+  </div>
 </ul>
 
