--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -16,9 +16,11 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-  <div *ngIf="ready$ | async">
+  <div *ngIf="ready$">
 	  <button *ngIf="!(signedIn$ | async)" (click)="signin()">Signin</button>
 	  <button *ngIf="signedIn$ | async" (click)="signout()">Signout</button>
   </div>
+	  <button  (click)="post()">POST token</button>
+	  <p>{{token}}</p>
 </ul>
 
